force-app/main/default/objects/leaseworks__Late_Payment_Activity__c/leaseworks__Late_Payment_Activity__c.object-meta.xml
<CustomObject>
    <label>Late Payment Activity</label>
    <nameField>
        <label>Late Payment Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Late Payment Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>