force-app/main/default/objects/leaseworks__Late_Payment_Activity__c/fields/leaseworks__Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Balance_Due__c</fullName>
    <description>Indicates a running balance due</description>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>