force-app/main/default/objects/leaseworks__Late_Payment_Activity__c/fields/leaseworks__Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date__c</fullName>
    <description>Date the payment/adjustment is recorded</description>
    <inlineHelpText>Date the payment/adjustment is recorded</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>