force-app/main/default/objects/leaseworks__Late_Payment_Activity__c/fields/leaseworks__Invoice__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>leaseworks__Invoice__c</referenceTo>
    <relationshipLabel>Late Payment Activities</relationshipLabel>
    <relationshipName>Late_Payment_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>