force-app/main/default/objects/leaseworks__Late_Payment_Activity__c/fields/leaseworks__Payment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>_Payment</label>
    <referenceTo>leaseworks__Payment__c</referenceTo>
    <relationshipLabel>Late Payment Activities</relationshipLabel>
    <relationshipName>Late_Payment_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>