force-app/main/default/objects/leaseworks__Late_Payment_Activity__c/fields/leaseworks__Sequence__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Sequence__c</fullName>
    <label>Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>